Allow for user defined mXparser functions in configs